--- a/elibrary-controller/src/main/resources/static/css/signin.css
+++ b/elibrary-controller/src/main/resources/static/css/signin.css
@@ -4,7 +4,7 @@ body {
 }
 
 body {
-    display: flex;
+    display: contents;
     align-items: center;
     padding-top: 40px;
     padding-bottom: 40px;
