--- a/elibrary-controller/src/main/resources/templates/error.html
+++ b/elibrary-controller/src/main/resources/templates/error.html
@@ -20,53 +20,11 @@
     <!-- Custom styles for this template -->
     <link href="/css/starter-template.css" rel="stylesheet">
 </head>
+
 <body>
-
-
-<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="/">Final project</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExampleDefault"
-                aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-            <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                <li class="nav-item">
-                    <a aria-current="page" class="nav-link active" href="/">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/users">Users</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/pets">Pets</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/books">Book</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/users/search">Search</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="/admin" tabindex="-1" aria-disabled="true">Disabled</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-bs-toggle="dropdown"
-                       aria-expanded="false">Admin</a>
-                    <ul class="dropdown-menu" aria-labelledby="dropdown01">
-                        <li><a class="dropdown-item" th:href="@{/admin/users}">Manage users</a></li>
-                        <li><a class="dropdown-item" th:href="@{/admin/pets}">Manage pets</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
-    </div>
-    </div>
-</nav>
+<div th:replace="fragments/upperNavbar :: copy"></div>
 
 <main class="container">
-
     <div class="starter-template text-center py-5 px-3">
         <h1>Error:</h1>
         <p></p>
@@ -111,14 +69,9 @@
             </td>
         </tr>
     </table>
+</main>
 
-</main><!-- /.container -->
-
-<footer class="footer mt-auto py-3 bg-light">
-    <div class="container">
-        <span class="text-muted">Copyright © 2021, All Right Reserved Ales'</span>
-    </div>
-</footer>
+<div th:replace="fragments/footer :: copy"></div>
 
 <script src="/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 </body>
