--- a/elibrary-controller/src/main/resources/templates/subscription/subscriptionInfo.html
+++ b/elibrary-controller/src/main/resources/templates/subscription/subscriptionInfo.html
@@ -22,52 +22,8 @@
     <link href="/css/starter-template.css" rel="stylesheet">
 </head>
 <body>
-<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="/">E-Library</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExampleDefault"
-                aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+<div th:replace="fragments/upperNavbar :: copy"></div>
 
-        <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-            <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                <li class="nav-item">
-                    <a class="nav-link" href="/books">Book</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/books/search">Searching book</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="/admin" tabindex="-1" aria-disabled="true">Disabled</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-bs-toggle="dropdown"
-                       aria-expanded="false">Admin</a>
-                    <ul class="dropdown-menu" aria-labelledby="dropdown01">
-                        <li><a class="dropdown-item" th:href="@{/admin/users}">Manage users</a></li>
-                        <li><a class="dropdown-item" th:href="@{/admin/books}">Manage books</a></li>
-                        <li><a class="dropdown-item" th:href="@{/admin/books/add}">Add book</a></li>
-                    </ul>
-                </li>
-            </ul>
-
-            <div class="d-flex">
-                <div th:object="${currentUser}">
-                    <div th:if="${currentUser != null}">
-                        <a class="btn btn btn-outline-secondary" th:href="@{'/subscription'}">My subscriptions</a>
-                        <a class="btn btn btn-outline-primary" th:href="@{'/users/info'}" th:text="*{username}"></a>
-                        <a class="btn btn-outline-danger" href="/logout">Log out</a>
-                    </div>
-                    <div th:if="${currentUser == null}">
-                        <a class="btn btn-outline-warning" href="/signup">Sign up</a>
-                        <a class="btn btn-outline-success" href="/login">Log in</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</nav>
 <nav class="bd-subnavbar py-2" aria-label="Secondary navigation">
     <div class="container-xxl d-flex align-items-md-center">
         <button class="btn bd-sidebar-toggle d-md-none py-0 px-1 ms-3 order-3 collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#bd-docs-nav" aria-controls="bd-docs-nav" aria-expanded="false" aria-label="Toggle docs navigation">
@@ -134,7 +90,7 @@
                     <th scope="row">
                         <h6 class="text-sm-start m-0" th:text="'N' + ${subscription.bookDetails.id}"></h6>
                         <h6 class="text-sm-start m-0" th:text="${subscription.bookDetails.getCategory().getCategoryPath()+ '/'}"></h6>
-                        <span class="h6"><a class="text-sm-start m-0 link-primary" th:href="@{/bookDetailss(categoryId=${subscription.bookDetails.getCategory().getId()})}"
+                        <span class="h6"><a class="text-sm-start m-0 link-primary" th:href="@{/books(categoryId=${subscription.bookDetails.getCategory().getId()})}"
                                  th:text="${subscription.bookDetails.getCategory().getCategoryName}"></a></span>
                         <!--/*@thymesVar id="bookDetails" type="by.it.academy.grodno.elibrary.api.dto.books.BookDto"*/-->
                         <h2 class="text-sm-start mt-2" th:text="${subscription.bookDetails.title}"></h2>
@@ -183,11 +139,7 @@
     </main>
 </div>
 
-<footer class="footer mt-auto py-3 bg-light">
-    <div class="container">
-        <span class="text-muted">Copyright © 2021, All Right Reserved Aliaksandr Rachko</span>
-    </div>
-</footer>
+<div th:replace="fragments/footer :: copy"></div>
 
 <script src="/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 <script src="/js/docs.min.js.js" crossorigin="anonymous"></script>
