--- a/elibrary-controller/src/main/resources/templates/fragments/bookingBookModal.html
+++ b/elibrary-controller/src/main/resources/templates/fragments/bookingBookModal.html
@@ -5,7 +5,7 @@
 <body>
 
 <!--/*@thymesVar id="thisBook" type="java.util.Set<by.it.academy.grodno.elibrary.api.dto.books.BookDto>"*/-->
-<div th:fragment="bookingBookModal (thisBook)">
+<div th:fragment="bookingBookModal(thisBook)">
     <div th:if="${thisBook.isAvailable()}">
         <!-- Button trigger modal - subscription -->
         <button type="button" class="btn btn-primary btn-sm mt-2"
@@ -54,6 +54,7 @@
             </div>
         </div>
     </div>
+</div>
 </body>
 
 </html>
