--- a/elibrary-controller/src/main/resources/templates/fragments/editRolesModal.html
+++ b/elibrary-controller/src/main/resources/templates/fragments/editRolesModal.html
@@ -32,7 +32,7 @@
                 </div>
 
                 <div class="modal-body">
-                    <table>
+                    <table class="mb-3">
                         <tr th:each="role : *{user.roles}">
                             <td>
                                 <p class="m-0 right" th:text="*{role}"></p>
@@ -50,27 +50,19 @@
                             </td>
                         </tr>
                     </table>
-                    <form action="#" th:action="@{/admin/users/roles/add}"
-                          th:method="post">
-                        <div class="mb-3 row">
-                            <div class="col-sm visually-hidden">
-                                <label class="form-label" for="editUserId">User ID</label>
-                                <input class="form-control" id="editUserId"
-                                       name="userId"
-                                       placeholder="ID" th:value="*{user.id}"
-                                       type="text">
-                            </div>
-                            <div class="m-3 col-sm">
-                                <label class="form-label visually-hidden" for="role">Role</label>
-                                <select id="role" class="form-select form-control-sm" name="roleName">
-                                    <option value="ROLE_USER" selected>ROLE_USER</option>
-                                    <option value="ROLE_ADMIN">ROLE_ADMIN</option>
-                                </select>
-                            </div>
-                            <div class="mb-3 col-sm">
-                                <button class="btn btn-success" type="submit">Add
-                                </button>
-                            </div>
+                    <form action="#" th:action="@{/admin/users/roles/add}" th:method="post">
+                        <div class="col-sm visually-hidden">
+                            <label class="form-label" for="editUserId">User ID</label>
+                            <input class="form-control" id="editUserId" name="userId" placeholder="ID"
+                                   th:value="*{user.id}" type="text">
+                        </div>
+                        <div class="input-group">
+                            <label class="form-label visually-hidden" for="role">Role</label>
+                            <select id="role" class="form-select form-control-sm" name="roleName">
+                                <option value="ROLE_USER" selected>ROLE_USER</option>
+                                <option value="ROLE_ADMIN">ROLE_ADMIN</option>
+                            </select>
+                            <button class="btn btn-outline-success" type="submit">Add</button>
                         </div>
                     </form>
                 </div>
